Fixed MAGE-6598: Impossible to input text in different lines in text area fields in the backend - Removed nowrap from cell as store scope hint appears in wrapper along with select now - Adjusted switcher scope hint in the right column

--- a/skin/adminhtml/default/default/boxes.css
+++ b/skin/adminhtml/default/default/boxes.css
@@ -385,11 +385,6 @@ select.multiselect option       { padding:3px 4px; border-bottom:1px solid #ddd;
 
 .columns .form-list             { width:auto; }
 .columns .form-list td.value    { width:280px; padding-right:5px !important; }
-.columns .form-list td.value  { white-space:nowrap; }
-.columns .form-list td.value > * { white-space:normal; }
-.columns .form-list td.value .attribute-change-checkbox { white-space:nowrap; }
-.columns .form-list td.value > strong,
-.columns .form-list td.value > button { display:block; }
 .columns .form-list td.value .next-toinput { width:75px; display:inline; margin-right:5px; }
 .columns .form-list td.value .next-toselect input.input-text { width:195px!important; display:inline; }
 
@@ -484,7 +479,10 @@ button.icon-btn span { text-indent:-999em; display:block; width:16px; padding:0;
 /* SWITCHER
 *******************************************************************************/
 .switcher { margin-bottom:10px; border:1px solid #cddddd; background:#e7efef; padding:10px; }
-.side-col .switcher select { width:100%; }
+.side-col .switcher { padding-right:26px; }
+.side-col .switcher label { display:block; }
+.side-col .switcher .link-store-scope { float:right; margin-right:-19px; margin-left:3px; }
+.side-col .switcher select { width:100%; float:left; }
 /*.side-col .switcher     { margin-right:20px; margin-bottom:20px; }*/
 .catalog-categories .side-col .switcher { margin-right:0; margin-bottom:15px; }
 .link-store-scope { display:inline-block; vertical-align:middle; margin:0 0 1px; width:16px; height:16px; background:url(images/i_question-mark.png) 0 0 no-repeat; text-decoration:none !important; text-indent:-999em; overflow:hidden; }
@@ -1043,6 +1041,7 @@ ul.tabs a.paypal-section:hover span { background:url(images/paypal_section.png) 
 .x-tree-node-ct { overflow:hidden; }
 
 /* Product - Websites */
+.website-name .checkbox                 { vertical-align:top; margin-top:2px; }
 .webiste-groups                         { padding:10px 20px; }
 .group-stores                           { padding:2px 10px; }
 
@@ -1519,6 +1518,7 @@ ul.super-product-attributes { padding-left:15px; }
 .normal             { font-weight:normal !important; }
 
 /* Clear */ /* This keeps our HTML free of buncha clearing elements */
+.side-col .switcher:after,
 .message-popup .message-popup-head:after,
 .message-popup .message-popup-content .message:after,
 .login-form .form-buttons:after,
